Test jpx install, spill, docker mount, and command parsing (TEST-J1..J6)
Daemon-free coverage: skip re-materialization when an install appears during
resolution (J1), the modular streaming-spill branch (J2), spill temp cleanup
on failure (J3), a read-only docker mount request via a recording double (J4),
the ALL-MODULE-PATH branch for a non-self-contained graph (J5), and
Command.parse guards plus the missing-storage latestInstalled branch (J6).
The Windows-only collision catch and System.exit CLI paths are left as noted
non-daemon-free gaps.